--- a/LogAppUs/src/app/auth/components/login/login.component.html
+++ b/LogAppUs/src/app/auth/components/login/login.component.html
@@ -1,22 +1,21 @@
-<!-- partial:index.partial.html -->
 <div id="bg"></div>
 
 <form [formGroup]="formularioLog" (ngSubmit)="login()">
   <div class="form-field">
-    <input [placeholder]="username" formControlName="username" required/>
+    <input id="username" name="username" placeholder="Username" formControlName="username" required />
   </div>
   
   <div class="form-field">
-    <input type="password" placeholder="Password" formControlName="pass" required/>                        
- </div>
+    <input id="pass" name="pass" type="password" placeholder="Password" formControlName="pass" required />                        
+  </div>
   
   <div class="form-field">
-    <button class="btn" type="submit" [disabled]="formularioLog.invalid">Log in</button>
+    <button class="btn" type="submit">Log in</button>
   </div>
 
   <div class="form-field">
-    <button class="btn-sec" routerLink="/auth/register">Registrarme</button>
+    <button class="btn-sec" type="button" [routerLink]="'/auth/register'">Registrarme</button>
   </div>
 </form>
-<!-- partial -->
+
 
