Agregamos Frontend de productos

--- a/LogAppUs/src/app/auth/components/login/login.component.html
+++ b/LogAppUs/src/app/auth/components/login/login.component.html
@@ -1,3 +1,4 @@
+<body>
 <div id="bg"></div>
 
 <form [formGroup]="formularioLog" (ngSubmit)="login()">
@@ -17,5 +18,5 @@
     <button class="btn-sec" type="button" [routerLink]="'/auth/register'">Registrarme</button>
   </div>
 </form>
-
+</body>
 
