--- a/LogAppUs/src/app/protected-app/dashboard/components/add-edit-product/add-edit-product.component.html
+++ b/LogAppUs/src/app/protected-app/dashboard/components/add-edit-product/add-edit-product.component.html
@@ -1,1 +1,26 @@
-<p>add-edit-product works!</p>
+<div class="row mt-1">
+    <div class="col-lg-4 offset-lg-4">
+        <div class="card text-white bg-primary mb-3" style="max-width: 25rem;">
+            <div class="card-header text-center">Agregar Producto</div>
+            <div class="card-body">
+                <form>
+                    <input type="text" class="form-control" placeholder="Ingrese nombre">
+                    <input type="text" class="form-control mt-2" placeholder="Ingrese descripción">
+                    <input type="text" class="form-control mt-2" placeholder="Ingrese precio">
+                    <input type="text" class="form-control mt-2" placeholder="Ingrese stock">
+                    <div class="row mt-2 text-center">
+                        <div class="col-lg-6">
+                            <button routerLink="/dashboard" type="button" class="btn btn-light">Volver</button>
+                        </div>
+                        <div class="col-lg-6">
+                            <button type="button" class="btn btn-secondary">Aceptar</button>
+                        </div>
+                    </div>
+                    
+                </form> 
+            </div> 
+              
+        </div> 
+    </div>
+</div>
+
